# pylcm

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .roborev.toml  AGENTS.md  CHANGES.md  CLAUDE.md  CLAUDE_CONTINUATION_GUIDE.md  DESIGN-age-dependent-grids.md  FLAT_TRANSITIONS_IMPLEMENTATION_NOTES.md  FUES_AUDIT_VERIFICATION_HANDOFF.md  FUES_AUDIT_VERIFICATION_RESULTS.md  MODEL_BLOCKS_DESIGN.md  MODEL_REFACTOR_PLAN.md  NOTICE  PLAN.md  README.md  REGIMES_DESIGN.md  REVIEW_COMMENTS.md  asv.conf.json  demo_new_interface.py  index.html  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement.md
.github/workflows/: benchmark-check.yml  benchmark-main.yml  benchmark-pr.yml  main.yml  publish-to-pypi.yml
benchmarks/: __init__.py  _bench_mahler_yum.py.disabled  _gpu_mem.py  bench_aca_baseline.py  bench_grid_types.py  bench_iskhakov_et_al_2017.py  bench_mahler_yum.py  bench_mortality.py  bench_precautionary_savings.py  bench_simulate.py  bench_solve.py  check_results.py  conftest.py  pr_comment.py  publish.py  test_gpu_mem.py
benchmarks/asv/: __init__.py  _gpu_mem.py  bench_aca_baseline.py  bench_iskhakov_et_al_2017.py  bench_mahler_yum.py  bench_precautionary_savings.py
benchmarks/ds_replication/: app1_retirement_accuracy.py  app2_fues_accuracy.py  app2_housing_accuracy.py  app3_discrete_housing_accuracy.py  ds2024_housing_comparison.py  run_app2_incremental.py  run_ds2024_pension.py  run_paper_scale.py
bqs-egm-design/: bqsegm_case_piece_api_design.md  claude-plan.md  solver_choice_theory_bqsegm_egm_bruteforce.md
docs/: credits.md  ep-01-index-representation.md  index.md  lep-01.md  myst.yml  references.bib
docs/design/: deviations.md  migration-mapping.md
docs/development/: adr_continuous_outer_inference.md  benchmarking.md  conventions.md  index.md  outer_search_error_budget.md  package_structure.md  setup.md
docs/examples/: consumption_saving.md  epstein_zin.ipynb  epstein_zin.md  index.md  iskhakov_et_al_2017.md  mahler_yum_2024.md  mortality.md  precautionary_savings.md  precautionary_savings_health.md  tiny.md
docs/explanations/: adding_a_solver.md  approximating_continuous_shocks.ipynb  architecture.md  beta_delta.ipynb  dispatchers.ipynb  function_representation.ipynb  index.md  interpolation.ipynb  iskhakov_et_al_2017.ipynb  params_workflow.ipynb  phase_grammar.ipynb  shocks.ipynb  stochastic_transitions.ipynb  transitions.ipynb
docs/getting_started/: index.md  installation.md  tiny_example.ipynb
docs/user_guide/: age_specialized.md  benchmarking.md  case_piece_solver.md  choosing_a_solver.md  continuous_stochastic_processes.md  debugging.md  defining_models.md  dispatch.md  focusing_on_the_economics.ipynb  grids.ipynb  grids.md  index.md  installation.md  nbegm.md  pandas_interop.md  parameters.md  regimes.ipynb  shocks.md  solving_and_simulating.md  tiny_example.ipynb  transitions.ipynb  tuning.md  write_economics.ipynb
examples/: README.md  __init__.py  long_running.py
examples/cons_sav/: cons_sav.py  simulate_model.py
examples/consumption_saving/: model.py  model_spec.py  simulate_model.py
examples/long_running/: README.md  long_running.py
examples/mahler_yum_2024/: Mahler_Yum_2024.py  README.md  create_model_inputs.py  mahler_yum_2024.py  model.py  model_spec.py  run_model.py  simulate_model.py
explanations/: README.md  function_representation.ipynb  params_workflow.ipynb
nb-egm-design/: claude-plan.md  nbegm-paper-draft.md  nbegm_case_piece_api_design.md  solver_choice_theory_nbegm_egm_bruteforce.md
negm_phase0/: brute_feasibility_probe.py  kinked_toy_oracle.py  negm-phase0-findings.md
src/_lcm/: __init__.py  ages.py  beartype_conf.py  certainty_equivalent.py  coarse_transition.py  dtypes.py  engine.py  identity_transition.py  jaxtyping_patch.py  logsum.py  model_processing.py  pandas_utils.py  state_action_space.py  transition_checks.py  typing.py  user_regime_validation.py  variables.py
src/lcm/: Q_and_F.py  __init__.py  _ages.py  _beartype_conf.py  _config.py  _transition_checks.py  ages.py  argmax.py  branch_aggregation.py  case_piece.py  categorical.py  certainty_equivalent.py  dispatchers.py  dtypes.py  engine.py  entry_point.py  error_handling.py  exceptions.py  function_representation.py  functools.py  grid_helpers.py  grids.py  interfaces.py  logging.py  mark.py  max_Q_over_a.py  max_Q_over_c.py  max_Qc_over_d.py  model.py  model_initialization.py  model_processing.py  ndimage.py  nested_mapping_params.py  next_state.py  outer_search.py  pandas_utils.py  params.py  persistence.py  phased.py  processes.py  (+17 more)
src/lcm_examples/: __init__.py  epstein_zin.py  iskhakov_et_al_2017.py  mortality.py  precautionary_savings.py  precautionary_savings_health.py  stochastic_volatility.py  tiny.py
tests/: conftest.py  mock_regime.py  model_mock.py  regime_mock.py  test.py  test_Q_and_F.py  test_ages.py  test_analytical_solution.py  test_argmax.py  test_ast_inspection.py  test_beartype_claw.py  test_bqsegm_breakpoints.py  test_bqsegm_lowering.py  test_bqsegm_segments.py  test_bqsegm_validation.py  test_canonical_params.py  test_carried_states.py  test_case_piece.py  test_certainty_equivalent.py  test_chained_state_transitions.py  test_coarse_law_provenance.py  test_collective_regimes_draft.py  test_compilation_cache.py  test_continuous_outer_audit_regressions.py  test_dcegm_fixture_crosscheck.py  test_dcegm_retirement.py  test_dcegm_validation.py  test_debug_persistence.py  test_dispatchers.py  test_distributed.py  test_ds_app1_euler_accuracy.py  test_ds_app3_euler_accuracy.py  test_dtypes.py  test_dynamic_grids_and_fixed_params.py  test_economic_validation.py  test_effective_user_regime.py  test_entry_point.py  test_error_handling.py  test_error_handling_invalid_vf.py  test_explicit_dtype_filter.py  (+91 more)
tests/benchmarks/: test_ds2024_housing_comparison.py
tests/data/: n_nbegm_finite_baseline.npz
tests/egm/: test_branch_aggregation.py  test_outer_carry.py  test_outer_carry_fixed_cost.py  test_outer_interpolation.py  test_outer_refinement.py
tests/input_processing/: test_collapse_pair_keys.py  (+6 more)
(+681 files in other folders)
