[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-vcs", "hatchling" ]

[project]
name = "pylcm"
description = "Specification, solution, and simulation of finite-horizon dynamic choice models."
keywords = [
  "Dynamic programming",
  "Econometrics",
  "Economics",
  "Estimation",
  "Life cycle models",
  "Statistics",
]
requires-python = ">=3.14"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dynamic = [ "version" ]
dependencies = [
  # "dags>=0.5.0",
  "jax>=0.8",
  "jaxtyping>=0.3.2",
  "pandas",
  "portion>=2.6",
]
[[project.authors]]
name = "Janos Gabler"
[[project.authors]]
name = "Tim Mensinger"
email = "mensingertim@gmail.com"
[project.license]
file = "LICENSE"
[[project.maintainers]]
name = "Hans-Martin von Gaudecker"
email = "hmgaudecker@uni-bonn.de"
[[project.maintainers]]
name = "Tim Mensinger"
email = "mensingertim@gmail.com"
[project.readme]
content-type = "text/markdown"
file = "README.md"
[project.urls]
Github = "https://github.com/opensourceeconomics/pylcm"
Repository = "https://github.com/opensourceeconomics/pylcm"
Tracker = "https://github.com/opensourceeconomics/pylcm/issues"

[tool.hatch]
build.hooks.vcs.version-file = "src/lcm/_version.py"
build.targets.sdist.exclude = [ "tests" ]
build.targets.sdist.only-packages = true
build.targets.wheel.only-include = [ "src" ]
build.targets.wheel.sources = [ "src" ]
metadata.allow-direct-references = true
version.source = "vcs"

[tool.ruff]
target-version = "py314"
exclude = [ "src/lcm/sandbox" ]
fix = true
unsafe-fixes = false
[tool.ruff.lint]
select = [ "ALL" ]
extend-ignore = [
  "COM812",  # Conflicts with ruff-format
  "D",       # Docstrings
  "EM101",   # Exception must not use a string literal
  "EM102",   # Exception must not use an f-string literal
  "FIX002",  # Line contains TODO
  "ISC001",  # Conflicts with ruff-format
  "N802",    # Function name should be lowercase
  "N803",    # Argument name should be lowercase
  "N806",    # Variable in function should be lowercase
  "N815",    # Variable in class scope should not be mixedCase
  "PLR0913", # Too many arguments in function definition
  "TC001",   # Move application import into a type-checking block
  "TC002",   # Move third-party import into a type-checking block
  "TC003",   # Move standard library import into a type-checking block
  "TRY003",  # Long messages outside exception class
  "UP047",   # Generic function should use type parameters
]
per-file-ignores."examples/*" = [
  "E402",   # Module level import not at top of file
  "INP001", # Implicit namespace package
]
per-file-ignores."explanations/*" = [
  "ANN",    # Annotations
  "E402",   # Module level import not at top of file
  "INP001", # Implicit namespace package
  "T201",   # print found
  "T203",   # pprint found
]
per-file-ignores."src/lcm/functools.py" = [
  "ANN401", # Dynamically typed expressions (Any)
]
per-file-ignores."src/lcm/max_*" = [
  "N999", # Module name mixing uppercase and lowercase
]
per-file-ignores."src/lcm/Q_and_F.py" = [
  "N999", # Module name mixing uppercase and lowercase
]
per-file-ignores."tests/*" = [
  "ANN",     # Annotations
  "D",       # Docstrings
  "INP001",  # Implicit namespace package
  "N999",    # Module name mixing uppercase and lowercase
  "PLR2004", # Magic values in comparison
  "S101",    # Use of assert
  "S301",    # Use of pickle
]
per-file-ignores."tests/test_next_state.py" = [
  "ARG001", # Unused function argument
  "ARG005", # Unused lambda argument
  "E731",   # Do not assign a `lambda` expression, use a `def`
]
per-file-ignores."tests/test_Q_and_F.py" = [
  "ARG001", # Unused function argument
  "ARG005", # Unused lambda argument
  "E731",   # Do not assign a `lambda` expression, use a `def`
]
pydocstyle.convention = "google"
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [ "lcm.utils.Unset", "Unset" ]

[tool.pyproject-fmt]
column_width = 88
max_supported_python = "3.14"
table_format = "long"
collapse_tables = [ "tool.hatch" ]

[tool.pytest.ini_options]
addopts = [ "--pdbcls=pdbp:Pdb" ]
filterwarnings = []
markers = [
  "illustrative: Tests are designed for illustrative purposes",
]
norecursedirs = [ "docs" ]

[tool.ty.rules]
ambiguous-protocol-member = "error"
deprecated = "error"
division-by-zero = "error"
ignore-comment-unknown-rule = "error"
invalid-argument-type = "error"
invalid-ignore-comment = "error"
invalid-return-type = "error"
possibly-missing-attribute = "error"
possibly-missing-implicit-call = "error"
possibly-missing-import = "error"
possibly-unresolved-reference = "error"
redundant-cast = "error"
undefined-reveal = "error"
unresolved-global = "error"
unsupported-base = "error"
unused-ignore-comment = "error"
useless-overload-body = "error"
[tool.ty.src]
include = [ "src/", "tests/", "examples/" ]

[tool.pixi.dependencies]
python = "~=3.14.0"
cloudpickle = ">=3.1.2,<4"
jupyterlab = "*"
memory_profiler = "*"
numpy = ">=2.4"
plotly = ">=6.5"
prek = "*"
pyarrow = "*"
pybaum = "*"
scipy = ">=1.16"
snakeviz = "*"
[tool.pixi.environments]
cuda12 = { features = [ "cuda12" ], solve-group = "cuda12" }
cuda13 = { features = [ "cuda13" ], solve-group = "cuda13" }
tests-cpu = { features = [ "tests" ], solve-group = "default" }
tests-cuda12 = { features = [ "tests", "cuda12" ], solve-group = "cuda12" }
tests-cuda13 = { features = [ "tests", "cuda13" ], solve-group = "cuda13" }
[tool.pixi.feature.cuda12]
platforms = [ "linux-64" ]
system-requirements = { cuda = "12" }
[tool.pixi.feature.cuda12.target.linux-64.dependencies]
cuda-nvcc = "~=12.0"
[tool.pixi.feature.cuda12.target.linux-64.pypi-dependencies]
jax = { version = ">=0.8", extras = [ "cuda12" ] }
[tool.pixi.feature.cuda13]
platforms = [ "linux-64" ]
system-requirements = { cuda = "13" }
[tool.pixi.feature.cuda13.target.linux-64.dependencies]
cuda-nvcc = "~=13.0"
[tool.pixi.feature.cuda13.target.linux-64.pypi-dependencies]
jax = { version = ">=0.8", extras = [ "cuda13" ] }
[tool.pixi.feature.tests.dependencies]
matplotlib = "*"  # required because of pandas
pandas-stubs = "*"
pytest = "*"
pytest-cov = "*"
pytest-xdist = "*"
scipy-stubs = "*"
ty = "*"
[tool.pixi.feature.tests.tasks]
explanation-notebooks = "jupyter execute explanations/*.ipynb"
tests = "pytest tests"
tests-32bit = "pytest tests --precision=32"
tests-with-cov = "pytest tests --cov-report=xml --cov=./"
ty = "ty check"
[tool.pixi.pypi-dependencies]
dags = { git = "https://github.com/OpenSourceEconomics/dags.git", branch = "main" }
pdbp = "*"
pylcm = { path = ".", editable = true }
[tool.pixi.workspace]
channels = [ "conda-forge" ]
platforms = [ "linux-64", "osx-arm64", "win-64" ]

[tool.yamlfix]
line_length = 88
none_representation = "null"
sequence_style = "block_style"
