[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-vcs", "hatchling" ]

[project]
name = "pylcm"
description = "Specification, solution, and simulation of finite-horizon dynamic choice models."
keywords = [
  "Dynamic programming",
  "Econometrics",
  "Economics",
  "Estimation",
  "Life cycle models",
  "Statistics",
]
requires-python = ">=3.14"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dynamic = [ "version" ]
dependencies = [
  "cloudpickle>=3.1.2,<4",
  "dags>=0.5.1",
  "h5py>=3.12",
  "jax>=0.9",
  "jaxtyping>=0.3.2",
  "pandas",
  "portion>=2.6",
]
[[project.authors]]
name = "Tim Mensinger"
email = "mensingertim@gmail.com"
[[project.authors]]
name = "Maximilian Jahn"
[[project.authors]]
name = "Janos Gabler"
[[project.authors]]
name = "Hans-Martin von Gaudecker"
email = "hmgaudecker@uni-bonn.de"
[project.license]
file = "LICENSE"
[[project.maintainers]]
name = "Tim Mensinger"
email = "mensingertim@gmail.com"
[[project.maintainers]]
name = "Hans-Martin von Gaudecker"
email = "hmgaudecker@uni-bonn.de"
[project.readme]
content-type = "text/markdown"
file = "README.md"
[project.urls]
Github = "https://github.com/opensourceeconomics/pylcm"
Repository = "https://github.com/opensourceeconomics/pylcm"
Tracker = "https://github.com/opensourceeconomics/pylcm/issues"

[tool.hatch]
build.hooks.vcs.version-file = "src/lcm/_version.py"
build.targets.sdist.exclude = [ "tests" ]
build.targets.sdist.only-packages = true
build.targets.wheel.only-include = [ "src" ]
build.targets.wheel.sources = [ "src" ]
metadata.allow-direct-references = true
version.source = "vcs"

[tool.ruff]
target-version = "py314"
exclude = [ "src/lcm/sandbox" ]
fix = true
unsafe-fixes = false
[tool.ruff.lint]
select = [ "ALL" ]
extend-ignore = [
  "COM812",  # Conflicts with ruff-format
  "D",       # Docstrings
  "EM101",   # Exception must not use a string literal
  "EM102",   # Exception must not use an f-string literal
  "FIX002",  # Line contains TODO
  "ISC001",  # Conflicts with ruff-format
  "N802",    # Function name should be lowercase
  "N803",    # Argument name should be lowercase
  "N806",    # Variable in function should be lowercase
  "N815",    # Variable in class scope should not be mixedCase
  "PLR0913", # Too many arguments in function definition
  "TC001",   # Move application import into a type-checking block
  "TC002",   # Move third-party import into a type-checking block
  "TC003",   # Move standard library import into a type-checking block
  "TRY003",  # Long messages outside exception class
  "UP047",   # Generic function should use type parameters
]
per-file-ignores."benchmarks/*" = [
  "ANN",     # Annotations
  "BLE001",  # Blind exception
  "D",       # Docstrings
  "INP001",  # Implicit namespace package
  "PLC0415", # import not at top level
  "PLR2004", # Magic values in comparison
  "PLW1510", # subprocess.run without explicit check
  "S101",    # Use of assert
  "SIM108",  # Ternary operator
  "S603",    # subprocess call without shell=True check
  "S607",    # Partial executable path
  "T201",    # print found
]
per-file-ignores."docs/**/*" = [
  "ANN001", # Missing type annotation for function argument
  "ANN002", # Missing type annotation for *args
  "ANN003", # Missing type annotation for **kwargs
  "ANN201", # Missing return type annotation for public function
  "ANN202", # Missing return type annotation for private function
  "ARG001", # Unused function argument
  "D100",   # Missing docstring in public module
  "D103",   # Missing docstring in public function
  "D104",   # Missing docstring in public package
  "PD011",  # Use `.to_numpy()` — false positive on JAX .values
  "S101",   # Use of assert
  "PD011",  # Use `.to_numpy()` instead of `.values`
  "RUF001", # Ambiguous Unicode characters (Greek letters in plot titles)
  "T201",   # print found
  "T203",   # pprint found
]
per-file-ignores."explanations/*" = [
  "ANN",    # Annotations
  "E402",   # Module level import not at top of file
  "INP001", # Implicit namespace package
  "T201",   # print found
  "T203",   # pprint found
]
per-file-ignores."src/lcm/functools.py" = [
  "ANN401", # Dynamically typed expressions (Any)
]
per-file-ignores."src/lcm/*Q_*.py" = [
  "N999", # Module name mixing uppercase and lowercase
]
per-file-ignores."tests/*" = [
  "ANN",     # Annotations
  "D",       # Docstrings
  "INP001",  # Implicit namespace package
  "N999",    # Module name mixing uppercase and lowercase
  "PLR2004", # Magic values in comparison
  "S101",    # Use of assert
  "S301",    # Use of pickle
  "SLF001",  # Private member access
]
per-file-ignores."tests/test_next_state.py" = [
  "ARG001", # Unused function argument
  "ARG005", # Unused lambda argument
  "E731",   # Do not assign a `lambda` expression, use a `def`
]
per-file-ignores."tests/test_Q_and_F.py" = [
  "ARG001", # Unused function argument
  "ARG005", # Unused lambda argument
  "E731",   # Do not assign a `lambda` expression, use a `def`
]
pydocstyle.convention = "google"
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [ "lcm.utils.Unset", "Unset" ]

[tool.pyproject-fmt]
column_width = 88
max_supported_python = "3.14"
table_format = "long"
collapse_tables = [ "tool.hatch", "tool.pytest", "tool.pytask", "tool.ty" ]
expand_tables = [
  "tool.pixi.dependencies",
  "tool.pixi.environments",
  "tool.pixi.feature.tests.pypi-dependencies",
  "tool.pixi.feature.tests.tasks",
  "tool.pixi.feature.type-checking.dependencies",
  "tool.pixi.feature.type-checking.tasks",
  "tool.pixi.pypi-dependencies",
  "tool.pixi.tasks",
  "tool.pixi.workspace",
]

[tool.pytest]
ini_options.addopts = [
  "--pdbcls=pdbp:Pdb",
  "--dist",
  "loadfile",
  "--benchmark-disable"
]
ini_options.filterwarnings = []
ini_options.markers = [
  "illustrative: Tests are designed for illustrative purposes",
]
ini_options.norecursedirs = [ "docs" ]

[tool.ty]
rules.ambiguous-protocol-member = "error"
rules.deprecated = "error"
rules.division-by-zero = "error"
rules.ignore-comment-unknown-rule = "error"
rules.ineffective-final = "error"
rules.invalid-enum-member-annotation = "error"
rules.invalid-ignore-comment = "error"
rules.invalid-legacy-positional-parameter = "error"
rules.redundant-cast = "error"
rules.unused-awaitable = "error"
rules.unused-ignore-comment = "error"
src.exclude = [ "docs/**/*.ipynb" ]
src.include = [ "src/", "tests/" ]

[tool.pixi.dependencies]
python = "~=3.14.0"
cloudpickle = ">=3.1.2,<4"
h5py = ">=3.12"
jupyterlab = "*"
memory_profiler = "*"
numpy = ">=2.4"
plotly = ">=6.5"
prek = "*"
pyarrow = "*"
pybaum = "*"
scipy = ">=1.16"
snakeviz = "*"
[tool.pixi.environments]
cuda12 = { features = [ "cuda12" ], solve-group = "cuda12" }
cuda13 = { features = [ "cuda13" ], solve-group = "cuda13" }
docs = { features = [ "docs" ], solve-group = "default" }
metal = { features = [ "metal" ], solve-group = "metal" }
tests-cpu = { features = [ "tests" ], solve-group = "default" }
tests-cuda12 = { features = [ "tests", "cuda12" ], solve-group = "cuda12" }
tests-cuda13 = { features = [ "tests", "cuda13" ], solve-group = "cuda13" }
tests-metal = { features = [ "tests", "metal" ], solve-group = "metal" }
type-checking = { features = [ "type-checking", "tests" ], solve-group = "default" }
[tool.pixi.feature.cuda12]
platforms = [ "linux-64" ]
system-requirements = { cuda = "12" }
[tool.pixi.feature.cuda12.target.linux-64.dependencies]
cuda-nvcc = "~=12.0"
[tool.pixi.feature.cuda12.target.linux-64.pypi-dependencies]
jax = { version = ">=0.9", extras = [ "cuda12" ] }
[tool.pixi.feature.cuda13]
platforms = [ "linux-64" ]
system-requirements = { cuda = "13" }
[tool.pixi.feature.cuda13.target.linux-64.dependencies]
cuda-nvcc = "~=13.0"
[tool.pixi.feature.cuda13.target.linux-64.pypi-dependencies]
jax = { version = ">=0.9", extras = [ "cuda13" ] }
[tool.pixi.feature.docs.dependencies]
jupyter-book = ">=2.0"
mystmd = "*"
[tool.pixi.feature.docs.pypi-dependencies]
quantecon = "*"
[tool.pixi.feature.docs.tasks]
build-docs = { cmd = "jupyter book build --html --execute", cwd = "docs", env = { JAX_PLATFORMS = "cpu" } }
explanation-notebooks = "jupyter execute docs/explanations/*.ipynb"
view-docs = { cmd = "jupyter book start --execute", cwd = "docs", env = { JAX_PLATFORMS = "cpu" } }
[tool.pixi.feature.metal]
platforms = [ "osx-arm64" ]
[tool.pixi.feature.metal.target.osx-arm64.pypi-dependencies]
jax = ">=0.9"
jax-metal = ">=0.1.1"
[tool.pixi.feature.tests.dependencies]
pytest = "*"
pytest-benchmark = "*"
pytest-cov = "*"
pytest-xdist = "*"
[tool.pixi.feature.tests.pypi-dependencies]
quantecon = "*"
[tool.pixi.feature.tests.tasks]
benchmarks = """\
  pytest benchmarks/ --benchmark-only -p no:xdist -o 'addopts=' -o \
  'python_files=bench_*.py test_*.py' -v\
  """
benchmarks-compare = """\
  pytest benchmarks/ --benchmark-only -p no:xdist -o 'addopts=' -o \
  'python_files=bench_*.py test_*.py' --benchmark-compare\
  """
benchmarks-save = """\
  pytest benchmarks/ --benchmark-only -p no:xdist -o 'addopts=' -o \
  'python_files=bench_*.py test_*.py' --benchmark-autosave -v\
  """
tests = "pytest tests"
tests-32bit = "pytest tests --precision=32"
tests-with-cov = "pytest tests --cov-report=xml --cov=./"
[tool.pixi.feature.type-checking.dependencies]
matplotlib = "*"
pandas-stubs = "*"
scipy-stubs = "*"
ty = "*"
[tool.pixi.feature.type-checking.tasks]
ty = "ty check"
[tool.pixi.pypi-dependencies]
jax = ">=0.9"
pdbp = "*"
pylcm = { path = ".", editable = true }
[tool.pixi.tasks]
benchmarks-publish = "python benchmarks/publish.py"
[tool.pixi.workspace]
channels = [ "conda-forge" ]
platforms = [ "linux-64", "osx-arm64", "win-64" ]

[tool.yamlfix]
line_length = 88
none_representation = "null"
sequence_style = "block_style"
